Properly initialize a report object before reading it.

This way we make sure that it's valid even if the xml data is not.

BUG: 327663